syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "SupersetProto";

package gaintain;

import "set.proto";

service SupersetService {
  rpc ListSupersets (SupersetsRequest) returns (Supersets) {}
  rpc CreateSuperset (NewSuperset) returns (Superset) {}
  rpc GetSuperset (SupersetRequest) returns (Superset) {}
  rpc UpdateSuperset (Superset) returns (Superset) {}
  rpc DeleteSuperset (SupersetRequest) returns (Superset) {}
}

message Superset {
  string id = 1;
  string workout_id = 2;
  int32 position = 3;
  repeated Set sets = 4;
}
message NewSuperset {
  string workout_id = 1;
  int32 position = 2;
}
message Supersets {
  repeated Superset supersets = 1;
}

message SupersetsRequest {
  string workout_id = 1;
}
message SupersetRequest {
  string id = 1;
}
